test_src/compiler_errors/types/binary/OrBoolError2.b
class OrBoolError2 {
    void test() {
        println(2 | false);
    }
}
